[package]
name = "hearthstone_reconnecter"
version = "0.1.0"
edition = "2021"

[dependencies.windows]
version = "0.60"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging"
]

[profile.release]
lto = true
strip = "symbols"